fixed toolbar icon spacing fixed tooltip location

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -220,6 +220,12 @@ h6 {
   margin: 0px -5px -16px -5px;
 }
 
+.toolbar-icons {
+  display: inline-block;
+  position: relative;
+  padding-left: 5px;
+}
+
 // Labels
 .label {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
